finished restructuring introduction and started background

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -51,6 +51,26 @@ isbn="978-3-540-45608-7"
   publisher={Cengage Learning}
 }
 
+@article{whitman2003,
+ author = {Whitman, Michael E.},
+ title = {Enemy at the Gate: Threats to Information Security},
+ journal = {Commun. ACM},
+ issue_date = {August 2003},
+ volume = {46},
+ number = {8},
+ month = aug,
+ year = {2003},
+ issn = {0001-0782},
+ pages = {91--95},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/859670.859675},
+ doi = {10.1145/859670.859675},
+ acmid = {859675},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+
 @article{GOEL,
 title = "Estimating the market impact of security breach announcements on firm values",
 journal = "Information \& Management",
@@ -74,6 +94,13 @@ keywords = "Security breaches, Event-study methodology, Risk analysis, Informati
   pages = {90--101},
   publisher = {ACM},
   url = {http://dx.doi.org/10.1145/1480881.1480894}
+}
+
+@MISC{heckman,
+  author = {Mark R. Heckman},
+  title = {The Difference between Data Security and Privacy},
+  howpublished = {Web article in United States CyberSecurity Magazine},
+  url={https://www.uscybersecurity.net/cybersecuritychannel/the-difference-between-data-security-and-privacy/}
 }
 
 @MISC{GameB_1,
